syntax = "proto3";
package thesixnetwork.sixprotocol.tokenmngr;

import "tokenmngr/token.proto";
import "tokenmngr/mintperm.proto";
import "tokenmngr/options.proto";
// this line is used by starport scaffolding # proto/tx/import

option go_package = "github.com/thesixnetwork/six-protocol/x/tokenmngr/types";

// Msg defines the Msg service.
service Msg {
      rpc CreateToken(MsgCreateToken) returns (MsgCreateTokenResponse);
  rpc UpdateToken(MsgUpdateToken) returns (MsgUpdateTokenResponse);
  rpc DeleteToken(MsgDeleteToken) returns (MsgDeleteTokenResponse);
  rpc CreateMintperm(MsgCreateMintperm) returns (MsgCreateMintpermResponse);
  rpc UpdateMintperm(MsgUpdateMintperm) returns (MsgUpdateMintpermResponse);
  rpc DeleteMintperm(MsgDeleteMintperm) returns (MsgDeleteMintpermResponse);
  rpc Mint(MsgMint) returns (MsgMintResponse);
  rpc CreateOptions(MsgCreateOptions) returns (MsgCreateOptionsResponse);
  rpc UpdateOptions(MsgUpdateOptions) returns (MsgUpdateOptionsResponse);
  rpc DeleteOptions(MsgDeleteOptions) returns (MsgDeleteOptionsResponse);
  rpc Burn(MsgBurn) returns (MsgBurnResponse);
// this line is used by starport scaffolding # proto/tx/rpc
}

message MsgCreateToken {
  string creator = 1;
  string name = 2;
  uint64 maxSupply = 3;
  string denomMetaData = 4;
  string mintee = 5;
}
message MsgCreateTokenResponse {}

message MsgUpdateToken {
  string creator = 1;
  string name = 2;
  uint64 maxSupply = 4;
  string mintee = 5;
}
message MsgUpdateTokenResponse {}

message MsgDeleteToken {
  string creator = 1;
  string name = 2;
}
message MsgDeleteTokenResponse {}

message MsgCreateMintperm {
  string creator = 1;
  string token = 2;
  string address = 3;

}
message MsgCreateMintpermResponse {}

message MsgUpdateMintperm {
  string creator = 1;
  string token = 2;
  string address = 3;

}
message MsgUpdateMintpermResponse {}

message MsgDeleteMintperm {
  string creator = 1;
  string token = 2;
  string address = 3;
}
message MsgDeleteMintpermResponse {}

message MsgMint {
  string creator = 1;
  uint64 amount = 2;
  string token = 3;
}

message MsgMintResponse {
}

message MsgCreateOptions {
  string creator = 1;
  string defaultMintee = 2;
}
message MsgCreateOptionsResponse {}

message MsgUpdateOptions {
  string creator = 1;
  string defaultMintee = 2;
}
message MsgUpdateOptionsResponse {}

message MsgDeleteOptions {
  string creator = 1;
}
message MsgDeleteOptionsResponse {}
message MsgBurn {
  string creator = 1;
  uint64 amount = 2;
  string token = 3;
}

message MsgBurnResponse {
  uint64 id = 1;
}

// this line is used by starport scaffolding # proto/tx/message